--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=clubesportiu
 spring.datasource.type=org.springframework.jdbc.datasource.DriverManagerDataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.jdbcUrl=jdbc:postgresql://db-aules.uji.es:5432/${DB}
+spring.datasource.jdbcUrl=jdbc:postgresql://{DATABASE}/${DB}
 spring.datasource.username=${USER}
 spring.datasource.password=${PASS}
 
